final css adjustments, html formatting and README edits

--- a/index.html
+++ b/index.html
@@ -7,72 +7,63 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
+        <link rel="stylesheet" href="./utils/style.css">
         <title>Document</title>
     </head>
-    <header class="Jumbotrom">
-    Team Webpage
+    <header class="jumbotron jumbotron-fluid justify-content-center align-items-center mt-0">
+    <div class="d-flex justify-content-center align-items-center">
+    <h1 class= "display-4">🌎 Team Management Webpage</h1>
+    </div>
     </header>
     
     <body>
     <main>
-         <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+        
+   <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title"> 💼 Manager</h5>
       <p class="card-text">
-      <ul>
-      <li>23434 </li>
-      <li>234 </li>
-      <li>234 </li>
-      <li>234</li>
+      <ul class="list-group list-group-flush">
+      <li class="list-group-item">ID: Jeremias </li>
+      <li class="list-group-item">Name: 225655 </li>
+      <li class="list-group-item">E-mail:<a href="mailto: Jeri@companyemail.com?subject=your title&body=TThe message">
+        <button class="btn" id="btnOutlook">Jeri@companyemail.com</button>
+    </a></li>
+      <li class="list-group-item">Office Number: 345-5564</li>
       </ul>
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      </p>      
     </div>
-  </div> <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+  </div>
+   <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">🛠️ Engineer</h5>
       <p class="card-text">
-      <ul>
-      <li>weee </li>
-      <li>werere </li>
-      <li>wwew </li>
-      <li>eee</li>
+      <ul class="list-group list-group-flush">
+      <li class="list-group-item">ID: Maria Jones </li>
+      <li class="list-group-item">Name: 5655 </li>
+      <li class="list-group-item">E-mail:<a href="mailto: marjon@companyemail.com?subject=your title&body=TThe message">
+        <button class="btn" id="btnOutlook">marjon@companyemail.com</button>
+    </a></li>
+      <li class="list-group-item">Github: <a href="https://github.com/mariahhhh">mariahhhh </a></li>
       </ul>
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div> <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title"> 🧑‍🎓 Intern</h5>
-      <p class="card-text">
-      <ul>
-      <li>wwww </li>
-      <li>weere </li>
-      <li>www </li>
-      <li>eeww</li>
-      </ul>
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div> <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title"> 🧑‍🎓 Intern</h5>
-      <p class="card-text">
-      <ul>
-      <li>rttr </li>
-      <li>ttrt </li>
-      <li>rr </li>
-      <li>trr</li>
-      </ul>
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      </p>      
     </div>
   </div>
-
+   <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"> 🧑‍🎓 Intern</h5>
+      <p class="card-text">
+      <ul class="list-group list-group-flush">
+      <li class="list-group-item">ID: Steven </li>
+      <li class="list-group-item">Name: 44554 </li>
+      <li class="list-group-item">E-mail:<a href="mailto: Steven@company.com?subject=your title&body=TThe message">
+        <button class="btn" id="btnOutlook">Steven@company.com</button>
+    </a></li>
+      <li class="list-group-item">School: UCF</li>
+      </ul>
+      </p>      
+    </div>
+  </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
